fixed alignment error on photolist

--- a/app/_scss/modules/_photo-list.scss
+++ b/app/_scss/modules/_photo-list.scss
@@ -1,5 +1,6 @@
 .photos-list {
   max-width: 960px;
+  margin: 0 auto;
   width: 100%;
   padding: 0 1rem;
 
